--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chaicharo鯖</title>
-    <meta property="description" content="">
+    <meta property="description" content="chaicharo鯖の公式サイトです">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
