--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <canvas class="hero-canvas"></canvas>
         <h1>Welcome to chaicharo鯖</h1>
         <p>ぜひサーバーに参加しよう！！</p>
-        <button class="cta">Join Now</button>
+        <a href="https://discord.gg/TV5SyHFHeZ" target="_blank" rel="noopener noreferrer">
+  <button class="cta">Join Now</button>
+</a>
+
     </section>
 
     <section id="features" class="features">
@@ -46,7 +49,10 @@
     <section id="join" class="join">
         <h2>参加する準備はできましたか?</h2>
         <p>私たちの素晴らしい Discord サーバーに参加するには、下のボタンをクリックしてください。</p>
-        <button class="btn">Join Discord</button>
+        <a href="https://discord.gg/TV5SyHFHeZ" target="_blank" rel="noopener noreferrer">
+  <button class="btn">Join Discord</button>
+</a>
+
     </section>
 
     <footer class="footer">
